--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 className="relative w-64 h-96 max-w-full max-h-full rounded-lg shadow-xl transition-transform duration-200 ease-out bg-cover bg-center"
                 style={{
                   transform: `perspective(1000px) rotateX(${tilt.x}deg) rotateY(${tilt.y}deg) scale3d(1, 1, 1)`,
-                  backgroundImage: "url('https://picsum.photos/256/384')"
+                  backgroundImage: "url('/Hianna S_Final_edited.jpg')"
                 }}
                 onMouseMove={handleMouseMove}
                 onMouseLeave={handleMouseLeave}
